css/style.css
:root {
    --color: black;
    --color-bg: white;
    --color-link: blue;
    --color-visited: purple;
    --color-accent: silver;

    --readable-width: 30rem;
    --finger-size: 64px;
    --spacing: 1rem;

    --nav-max-height: 100vh;
    --nav-transition-duration: 250ms;

    --nav-font-family: sans-serif;
    --nav-font-size: 1.5rem;

    --focus-box-shadow: inset 0 0 2px 1px blue;
}

body {
    margin: 0;
}

select, textarea, input, button {
    font: inherit;
}

.visually-hidden:not(:focus):not(:active) {
    position: absolute;
    width: 1px;
    height: 1px;
    overflow: hidden;
    clip-path: inset(50%);
    white-space: nowrap;
}

.home {
    & :is(.intro__title, .intro__subtitle) {
        text-align: center;
    }

    & .intro__title {
        margin-bottom: 0;
    }

    & .intro__social-links {
        margin-block: var(--spacing);
    }

    & .intro__social-links ul {
        list-style-type: '';
        margin: 0;
        margin-inline: auto;
        padding: 0;

        width: 100%;
        max-width: 20rem;

        display: grid;
        grid-template-columns: repeat(3, 1fr);
    }

    & .intro__social-links a {
        text-decoration: none;
        color: currentColor;
        font-size: 0.75rem;

        width: 100%;
        height: 100%;

        display: inline-flex;
        flex-direction: column;
        align-items: center;
    }

    & .intro__social-links__icon {
        font-size: 2.5rem;

        transition: transform 250ms;

        a:hover & {
            transform: scale(1.2);
        }
    }

    & .intro__text p {
        text-wrap: pretty;
        max-width: var(--readable-width);
        margin-inline: auto;
    }
}

.main {
    margin: 1rem;
}

.main-nav {
    position: relative;
    display: flex;
}

.main-nav__control:focus,
.main-nav__item a:focus,
.blog-history-nav a:focus
{
    outline: none;
    box-shadow: var(--focus-box-shadow);
}

.main-nav__control {
    height: var(--finger-size);
    width: 100%;
    border-style: none;

    padding: 0 var(--spacing);
    box-sizing: border-box;

    display: flex;
    align-items: center;
    gap: 0.25em;

    font-family: var(--nav-font-family);
    font-size: var(--nav-font-size);
    font-weight: bold;

    background-color: var(--color-accent);
}

.main-nav__list {
    background-color: var(--color-bg);

    margin: 0;
    padding: 0;

    &:where([role="list"]) {
        list-style-type: "";
    }

    position: absolute;
    top: var(--finger-size);
    left: 0;

    width: 100%;
    height: auto;
    max-height: 0;
    overflow: hidden;

    transition: max-height var(--nav-transition-duration);

    &:has(a:focus), .main-nav:has([aria-expanded="true"]) & {
        max-height: var(--nav-max-height);
        box-shadow:
            0 1px 0 rgb(0, 0, 0, 0.5),
            0 8px 5px rgb(0, 0, 0, 0.3);
    }
}

.main-nav__item {
    position: relative;

    & a {
        display: flex;
        align-items: center;
        gap: calc(var(--spacing) / 2);

        height: var(--finger-size);
        padding: 0 calc(var(--spacing) * 2);
        box-sizing: border-box;

        color: var(--primary-text-color);

        text-decoration: none;
    }

    &:has([aria-current="page"])::after {
        content: "" / "";
        display: block;

        width: 0.25em;
        height: calc(100% - 1em);

        position: absolute;
        top: 0.5em;
        left: 0.5em;

        background-color: var(--color-accent);
        pointer-events: none;
    }
}

@media screen and (min-width: 52rem) {
    :root {
        --main-width: 50rem;
    }

    .main-nav {
        width: var(--main-width);
        margin: auto;
    }

    .main-nav__control {
        display: none;
    }

    .main-nav__list {
        position: static;
        height: var(--finger-size);
        max-height: none;
        display: flex;
        border-bottom: 1px solid var(--color-accent);

        &:has(a:focus), .main-nav__control[aria-expanded="true"] ~ & {
            box-shadow: none;
        }
    }

    .main-nav__item:has([aria-current="page"])::after {
        width: calc(100% - 1em);
        height: 0.25em;
        top: calc(100% - 0.75em);
    }

    .main {
        width: var(--main-width);
        margin: auto;
    }
}

.accent-text {
    max-width: var(--readable-width);
    margin-inline: auto;
    margin-block: calc(var(--spacing) * 3);

    display: flex;
    flex-direction: column;
    gap: 1rem;

    & > * { margin: 0; }
}

.accent-text__poem {
    white-space: pre-line;

    &.preformatted { white-space: pre; }
}

.accent-text__attribution {
    text-align: end;
    text-wrap: balance;
    padding-inline: 1rem;
    box-sizing: border-box;
}

.collections-post {
    border-top: 1px solid black;
    padding: 1rem 0;

    &:first-of-type {
        border: none;
        padding-top: 0;
    }
}

.related-links {
    display: flex;
    justify-content: center;

    & a {
        display: inline-flex;
        align-items: center;
        font-size: 1.5rem;
        min-height: var(--finger-size);
    }
}

.post__image {
    margin: 0;
    & img {
        width: 100%;
        aspect-ratio: 16 / 9;
        object-fit: cover;
    }
}

.post__title {
    margin-bottom: 0;

    & a {
        display: flex;
        min-height: var(--finger-size);
        align-items: center;
    }
}

.post__date {
    text-align: end;
    margin-block: 0.5em;
}

.blog-history-nav {
    --item-spacing: 0.5em;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.blog-history-nav__title, .blog-history-nav__caption {
    margin: 0;
    flex: 100%;
    text-align: center;
}

.blog-history-nav__list {
    display: flex;

    margin: 0;
    padding: 0;
    list-style-type: "";
}

.blog-history-nav__previous, .blog-history-nav__next, .blog-history-nav__item {
    width: var(--finger-size);
    height: var(--finger-size);
    flex: 0 0 var(--finger-size);

    display: grid;
    place-items: center;

    position: relative;

    &:not(:has(a)) {
        color: gray;
    }
}

.blog-history-nav__list a {
    text-decoration: none;

    color: var(--color-link);
    background-color: var(--color-accent);
    background-clip: content-box;

    display: inline-grid;
    place-items: center;
    width: 100%;
    height: 100%;

    border-radius: 0.75em;

    padding: var(--item-spacing);
    box-sizing: border-box;

    &[aria-current="page"] {
        color: var(--color-bg);
        background-color: var(--color-visited);
    }
}

.blog-history-nav__ellipsis {
    display: flex;
    align-items: end;
    padding-block: var(--item-spacing);
    margin: 0 var(--item-spacing);
}

.blog-history-nav__jump {
    flex: 100%;
    margin-block: var(--spacing);
    
    display: flex;
    gap: 0.5em;
    justify-content: center;

    & > * {
        height: var(--finger-size);
        display: inline-flex;
        align-items: center;
    }
}

.blog-history-nav__jump__page {
    padding-inline: var(--spacing);
}

.blog-history-nav__jump__go {
    text-decoration: none;

    width: var(--finger-size);
    height: var(--finger-size);

    display: grid;
    place-items: center;

    background-color: var(--color-accent);
    color: var(--color);
    border-radius: 5px;
    border: 1px outset gray;
    box-sizing: border-box;
}

